# base-system

./: .gitignore  README.md  inventory.yml  pyproject.toml
inventory/: main.yml
playbooks/: main.yml
src/ansible_collections/com/filipstack/: README.md  galaxy.yml
src/ansible_collections/com/filipstack/roles/ffmpeg/tasks/: main.yml
src/ansible_collections/com/filipstack/roles/linux_base/tasks/: main.yml
src/ansible_collections/com/filipstack/roles/linux_base/templates/: packages.txt.j2
src/ansible_collections/com/filipstack/roles/python_dnf/tasks/: main.yml
src/ansible_collections/com/filipstack/roles/updates/meta/: main.yml
src/ansible_collections/com/filipstack/roles/updates/tasks/: main.yml
src/filipstack/: __main__.py  cli.py  inventory.yml  main_playbook.yml  paths.py
src/filipstack/playbooks/: main.yml  updates.yml
