[project]
name = "filip-stack"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible-core>=2.18.7",
    "ansible-runner>=2.4.1",
    "click>=8.2.1",
    "pyyaml>=6.0.2",
    "xdg-base-dirs>=6.0.2",
]
license.file = "LICENSE"

dynamic = ["version"]

[tool.flake8]
extend-ignore = [
    "E501", # Line too long
]

[tool.setuptools]
include-package-data = true

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ansible-lint>=25.6.1",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.3",
    "isort>=6.0.1",
]
